[gd_scene load_steps=6 format=3 uid="uid://dum8va50m831x"]

[ext_resource type="Script" path="res://stages/Stage_Sidescroll_Test.gd" id="1_sidescroll_test"]
[ext_resource type="PackedScene" path="res://entities/Player/PlayerSniper.tscn" id="2_player_sniper"]
[ext_resource type="PackedScene" path="res://entities/NPC/Zombie_Juggernaut.tscn" id="3_juggernaut"]
[ext_resource type="PackedScene" path="res://common/CameraRigs/SideRig.tscn" id="4_siderig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(2000, 100)

[node name="SidescrollTest" type="Node2D"]
script = ExtResource("1_sidescroll_test")

[node name="Environment" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Environment"]
position = Vector2(0, 300)

[node name="GroundCollision" type="CollisionShape2D" parent="Environment/Ground"]
shape = SubResource("RectangleShape2D_ground")

[node name="GroundSprite" type="ColorRect" parent="Environment/Ground"]
offset_left = -1000.0
offset_top = -50.0
offset_right = 1000.0
offset_bottom = 50.0
color = Color(0.4, 0.6, 0.3, 1)

[node name="Background" type="ColorRect" parent="Environment"]
z_index = -10
offset_left = -1000.0
offset_top = -500.0
offset_right = 1000.0
offset_bottom = 500.0
color = Color(0.5, 0.7, 0.9, 1)

[node name="PlayerSniper" parent="." instance=ExtResource("2_player_sniper")]
position = Vector2(100, 200)

[node name="ZombieJuggernaut" parent="." instance=ExtResource("3_juggernaut")]
position = Vector2(500, 200)

[node name="SideRig" parent="." instance=ExtResource("4_siderig")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 200.0
text = "Sidescrolling Test Stage
Loading..."
vertical_alignment = 1
